# onesync

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/onesync-cli/: Cargo.toml
crates/onesync-cli/src/: cli.rs  commands.rs  error.rs  exit_codes.rs  main.rs  output.rs  rpc.rs  service.rs
crates/onesync-cli/tests/: macos_lifecycle.rs
crates/onesync-core/: Cargo.toml
crates/onesync-core/src/: lib.rs  limits.rs
crates/onesync-core/src/engine/: case_collision.rs  conflict.rs  cycle.rs  executor.rs  mod.rs  observability.rs  planner.rs  reconcile.rs  retry.rs  scheduler.rs  types.rs
crates/onesync-core/src/ports/: audit_sink.rs  clock.rs  id_generator.rs  jitter.rs  local_fs.rs  mod.rs  remote_drive.rs  state.rs  token_vault.rs
crates/onesync-core/tests/: engine_conflict_prop.rs  engine_cycle_case_collision.rs  engine_cycle_case_collision_auto_rename.rs  engine_cycle_case_remote_rename.rs  engine_cycle_clean.rs  engine_cycle_conflict.rs  engine_cycle_dirty.rs  engine_cycle_initial_sync_conflict.rs  engine_cycle_local_upload.rs  engine_cycle_persists_delta_state.rs  engine_cycle_remote_dirty.rs  engine_cycle_synced_post_op.rs  engine_property.rs  engine_reconcile_prop.rs  engine_rescan.rs  engine_retry.rs  engine_retry_prop.rs  executor_op_kinds.rs
crates/onesync-core/tests/helpers/: mod.rs
crates/onesync-daemon/: Cargo.toml
crates/onesync-daemon/src/: audit_sink.rs  check.rs  lib.rs  lock.rs  logging.rs  login_registry.rs  main.rs  scheduler.rs  shutdown.rs  startup.rs  webhook_receiver.rs  wiring.rs
crates/onesync-daemon/src/ipc/: dispatch.rs  framing.rs  mod.rs  server.rs  subscriptions.rs
crates/onesync-daemon/src/methods/: account.rs  audit.rs  config.rs  conflict.rs  health.rs  mod.rs  pair.rs  run.rs  service.rs  state.rs
crates/onesync-daemon/tests/: conn_writer.rs  ipc_handshake.rs  m9_end_to_end.rs  methods.rs  shutdown_drain.rs  subscribe_filters.rs  subscriptions.rs  upgrade.rs
crates/onesync-fs-local/: Cargo.toml
crates/onesync-fs-local/src/: adapter.rs  error.rs  fakes.rs  hash.rs  lib.rs  ops.rs  path.rs  scan.rs  volumes.rs  watcher.rs  write.rs
crates/onesync-graph/: Cargo.toml
crates/onesync-graph/src/: adapter.rs  client.rs  delta.rs  download.rs  error.rs  fakes.rs  items.rs  lib.rs  ops.rs  throttle.rs  urls.rs
crates/onesync-graph/src/auth/: code_exchange.rs  id_token.rs  listener.rs  mod.rs  pkce.rs  refresh.rs
crates/onesync-graph/src/upload/: mod.rs  session.rs  small.rs
crates/onesync-keychain/: Cargo.toml
crates/onesync-keychain/src/: fakes.rs  lib.rs  macos.rs  stub.rs  token_source.rs
crates/onesync-protocol/: Cargo.toml
crates/onesync-protocol/src/: account.rs  audit.rs  config.rs  conflict.rs  enums.rs  errors.rs  file_entry.rs  file_op.rs  file_side.rs  handles.rs  id.rs  lib.rs  pair.rs  path.rs  primitives.rs  remote.rs  rpc.rs  sync_run.rs
crates/onesync-protocol/tests/: schema_compliance.rs
crates/onesync-state/: Cargo.toml  schema.sql
crates/onesync-state/src/: connection.rs  error.rs  fakes.rs  lib.rs  retention.rs  store.rs
crates/onesync-state/src/migrations/: V001__initial_schema.sql  V002__m9_fields.sql  V003__webhook_notification_url.sql  mod.rs
crates/onesync-state/src/queries/: accounts.rs  audit.rs  config.rs  conflicts.rs  file_entries.rs  file_ops.rs  mod.rs  pairs.rs  sync_runs.rs
crates/onesync-state/tests/: integration_pipeline.rs  m2_integration.rs  m9_migration.rs
crates/onesync-time/: Cargo.toml
crates/onesync-time/src/: fakes.rs  lib.rs  system_clock.rs  system_jitter.rs  ulid_generator.rs
docs/: README.md
docs/install/: README.md  install.sh  upgrade.md
docs/install/homebrew/: README.md  onesync.rb
docs/plans/: 2026-05-11-m1-foundations.md  2026-05-11-roadmap.md  2026-05-12-m2-state-and-local-fs.md  2026-05-12-m3a-graph-adapter.md  2026-05-12-m3b-keychain.md  2026-05-12-m4-sync-engine.md  2026-05-12-m5-daemon-ipc.md  2026-05-12-m6-cli.md  2026-05-12-m7-lifecycle.md  2026-05-12-m8-wire-handlers.md  2026-05-12-m9-connectivity-and-decisions.md  2026-05-13-m12b-path-to-v01.md  2026-05-15-remediation.md
docs/reviews/: 2026-05-15-auth.md  2026-05-15-cli-protocol-keychain-time.md  2026-05-15-daemon-ipc.md  2026-05-15-fs-local.md  2026-05-15-graph-io.md  2026-05-15-state-store.md  2026-05-15-sync-engine.md  RP1-progress.md  baseline.md
docs/spec/: 00-overview.md  01-domain-model.md  02-architecture.md  03-sync-engine.md  04-onedrive-adapter.md  05-local-adapter.md  06-state-store.md  07-cli-and-ipc.md  08-installation-and-lifecycle.md  09-development-guidelines.md  canonical-types.schema.json
xtask/: Cargo.toml
xtask/src/: main.rs
