[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
authors = ["onesync contributors"]
repository = "https://github.com/antstanley/onesync"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "deny"
todo = "deny"
unimplemented = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
thiserror     = "1"
ulid          = { version = "1", features = ["serde"] }
chrono        = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
unicode-normalization = "0.1"
jsonschema    = "0.18"
async-trait   = "0.1"
tokio         = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "sync", "time"] }
proptest      = "1"
