[workspace]
resolver = "3"
members = ["crates/*", "xtask"]

[workspace.package]
edition = "2024"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
authors = ["onesync contributors"]
repository = "https://github.com/antstanley/onesync"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "deny"
todo = "deny"
unimplemented = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
thiserror     = "1"
ulid          = { version = "1", features = ["serde"] }
chrono        = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
unicode-normalization = "0.1"
jsonschema    = { version = "0.18", features = ["draft202012"] }
async-trait   = "0.1"
tokio         = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "sync", "time"] }
proptest      = "1"
rusqlite      = { version = "0.38", features = ["bundled", "chrono", "serde_json"] }
r2d2          = "0.8"
r2d2_sqlite   = "0.32"
refinery      = { version = "0.9", features = ["rusqlite"] }
tempfile      = "3"
fs2           = "0.4"
notify        = "6"
blake3        = "1"
clap          = { version = "4", features = ["derive"] }
anyhow        = "1"
security-framework = "3"
reqwest       = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
url           = "2"
base64        = "0.22"
sha2          = "0.10"
wiremock      = "0.6"
futures       = "0.3"
bytes         = "1"
getrandom     = "0.2"
sha1          = "0.10"
