[package]
name = "onesync-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
onesync-protocol = { path = "../onesync-protocol" }
async-trait      = { workspace = true }
serde            = { workspace = true }
thiserror        = { workspace = true }
tokio            = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
