[package]
name = "onesync-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
onesync-protocol = { path = "../onesync-protocol" }
async-trait      = { workspace = true }
blake3           = { workspace = true }
chrono           = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
tokio            = { workspace = true }
ulid             = { workspace = true }

[dev-dependencies]
proptest        = { workspace = true }
chrono          = { workspace = true }
tokio           = { workspace = true, features = ["rt-multi-thread", "macros"] }
ulid            = { workspace = true }
onesync-time    = { path = "../onesync-time" }
onesync-state   = { path = "../onesync-state", features = ["fakes"] }
onesync-fs-local = { path = "../onesync-fs-local", features = ["fakes"] }
onesync-graph   = { path = "../onesync-graph", features = ["fakes"] }
bytes           = { workspace = true }
