[package]
name = "onesync-fs-local"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
onesync-core     = { path = "../onesync-core" }
onesync-protocol = { path = "../onesync-protocol" }
async-trait      = { workspace = true }
blake3           = { workspace = true }
chrono           = { workspace = true }
fs2              = { workspace = true }
notify           = { workspace = true }
tempfile         = { workspace = true }
thiserror        = { workspace = true }
tokio            = { workspace = true }

[dev-dependencies]
proptest         = { workspace = true }
