[package]
name = "onesync-graph"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Microsoft Graph adapter implementing the RemoteDrive port for onesync."

[lints]
workspace = true

[dependencies]
onesync-core    = { path = "../onesync-core" }
onesync-protocol = { path = "../onesync-protocol" }
async-trait     = { workspace = true }
chrono          = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true, features = ["io-util", "net", "macros", "rt-multi-thread", "sync", "time"] }
reqwest         = { workspace = true }
url             = { workspace = true }
base64          = { workspace = true }
sha2            = { workspace = true }
futures         = { workspace = true }
bytes           = { workspace = true }
getrandom       = { workspace = true }
sha1            = { workspace = true }

[dev-dependencies]
wiremock        = { workspace = true }
tempfile        = { workspace = true }
proptest        = { workspace = true }
tokio           = { workspace = true, features = ["io-util", "net", "macros", "rt-multi-thread", "sync", "time"] }
