[package]
name = "onesync-state"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
onesync-core     = { path = "../onesync-core" }
onesync-protocol = { path = "../onesync-protocol" }
async-trait      = { workspace = true }
chrono           = { workspace = true }
rusqlite         = { workspace = true }
r2d2             = { workspace = true }
r2d2_sqlite      = { workspace = true }
refinery         = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
tokio            = { workspace = true }
ulid             = { workspace = true }

[dev-dependencies]
tempfile         = { workspace = true }
proptest         = { workspace = true }
